syntax = "proto3";
package wfchain.ift;

import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "wfchain/ift/ift.proto";

option go_package = "github.com/cosmos/wfchain/x/ift/types";

// Msg defines the IFT module Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // RegisterIFTBridge registers a new IBC bridge to a counterparty IFT contract
  rpc RegisterIFTBridge(MsgRegisterIFTBridge) returns (MsgRegisterIFTBridgeResponse);
  // RemoveIFTBridge removes an existing IBC bridge
  rpc RemoveIFTBridge(MsgRemoveIFTBridge) returns (MsgRemoveIFTBridgeResponse);
  // IFTTransfer initiates a cross-chain token transfer
  rpc IFTTransfer(MsgIFTTransfer) returns (MsgIFTTransferResponse);
  // IFTMint mints tokens in response to a cross-chain transfer
  rpc IFTMint(MsgIFTMint) returns (MsgIFTMintResponse);
  // UpdateParams updates the module parameters
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgRegisterIFTBridge registers a new IBC bridge to a counterparty IFT contract
message MsgRegisterIFTBridge {
  option (cosmos.msg.v1.signer) = "signer";

  // The address of the signer registering the bridge (must be authority)
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // The denom representing the IFT token on this chain
  string denom = 2;
  // The IBC client identifier on the local chain representing the counterparty chain
  string client_id = 3;
  // The address of the IFT on the counterparty chain
  string counterparty_ift_address = 4;
  // The identifier of the IFTSendCall constructor to use (e.g., "evm" or "cosmos")
  string ift_send_call_constructor = 5;
}

message MsgRegisterIFTBridgeResponse {}

// MsgRemoveIFTBridge removes an existing IBC bridge
message MsgRemoveIFTBridge {
  option (cosmos.msg.v1.signer) = "signer";

  // The address of the signer removing the bridge (must be authority)
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // The denom representing the IFT token on this chain
  string denom = 2;
  // The IBC client identifier on the local chain representing the counterparty chain
  string client_id = 3;
}

message MsgRemoveIFTBridgeResponse {}

// MsgIFTTransfer initiates a cross-chain token transfer
message MsgIFTTransfer {
  option (cosmos.msg.v1.signer) = "signer";

  // The address of the signer initiating the transfer
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // The denom representing the IFT token on this chain
  string denom = 2;
  // The IBC client identifier over which the transfer is being made
  string client_id = 3;
  // The address of the receiver on the counterparty chain
  string receiver = 4;
  // The amount of tokens to transfer
  string amount = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  // The timeout timestamp for the IBC packet (in seconds since epoch)
  uint64 timeout_timestamp = 6;
}

message MsgIFTTransferResponse {
  // The sequence number of the IBC packet
  uint64 sequence = 1;
}

// MsgIFTMint mints tokens in response to a cross-chain transfer
message MsgIFTMint {
  option (cosmos.msg.v1.signer) = "signer";

  // The address of the signer (must be ICS27-GMP account controlled by counterparty bridge)
  string signer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // The denom representing the IFT token on this chain
  string denom = 2;
  // The address of the receiver on the local chain
  string receiver = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // The amount of tokens to mint
  string amount = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

message MsgIFTMintResponse {}

// MsgUpdateParams updates the module parameters
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // Authority is the address that controls the module (typically governance)
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // Params defines the new parameters to set
  Params params = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateParamsResponse {}
